# generalization

./: README.md  pyproject.toml
src/generalization/data/: addition.py  dataloader.py  dataset.py  tokenizer.py
src/generalization/models/: architecture.py  models.py  transformer.py
src/generalization/test/: eval.py
src/generalization/train/: train.py  trainer.py
